increased max width ratio to hopefully fix display on iphone 14 pro

--- a/assets/style.css
+++ b/assets/style.css
@@ -250,7 +250,7 @@ section nav a:hover {
     color: #1C7A1C;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 896px) {
     header {
         height: auto;
         width: auto;
